<resources>
    <string name="app_name">HowlInstagram</string>
    <string name="facebook_app_id">873009302900995</string>
    <string name="fb_login_protocol_scheme">fb873009302900995</string>

    <!-- Sign In -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin_email">회원가입 혹은 이메일로 로그인</string>
    <string name="signin_fail_null">이메일과 비밀번호를 모두 입력해주세요.</string>
    <string name="signin_google">구글 아이디로 로그인</string>
    <string name="signin_google_faile">구글 로그인 중 오류 발생. 다시 시도해 주세요.</string>
    <string name="signin_facebook">Facebook login</string>
    <string name="signup_complete">Membership success</string>
    <string name="signin_complete">Login 성공</string>
    <string name="signout">Signout</string>
    <string name="signout_success">Signout success</string>
    <string name="signout_fail">Signout fail</string>
    <string name="signout_fail_null">이메일과 비밀번호를 확인해주세요.</string>

    <!-- Bottom Navigation View -->
    <string name="home">home</string>
    <string name="search">Search</string>
    <string name="gallery">Gallery</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>

    <!-- Account -->
    <string name="post">게시물</string>
    <string name="following">팔로잉</string>
    <string name="follower">팔로워</string>
    <string name="follow">팔로우</string>
    <string name="follow_cancel">팔로우 취소</string>
    <string name="editProfile">프로필 편집</string>
    <string name="count_0">0</string>
    <string name="message">메시지</string>

    <!-- Alarm -->
    <string name="alarm_favorite">좋아요 이벤트 성공!</string>
    <string name="alarm_comment">left a message</string>
    <string name="alarm_follow">has started to follow your account</string>

    <!-- Comment -->
    <string name="send">Send</string>

    <!-- Add Photo -->
    <string name="upload_image">게시글 업로드</string>
    <string name="hint_image_content">문구 입력</string>
    <string name="upload_success">업로드 완료!</string>
    <string name="upload_fail">업로드 중 오류 발생! 다시 시도해 주세요.</string>

    <!-- Toolbar -->
    <string name="back">Back</string>

    <!-- etc -->
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_alarm">오류 발생! 다시 시도해 주세요.</string>
    <string name="take_photo"> Take Photo</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="start_capture">Start Capture</string>
    <string name="title_activity_main2">MainActivity2</string>
</resources>